--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
 name = "chip8"
 version = "0.1.0"
-edition = "2021"
+edition = "2018"
+
+[lib]
+crate-type = ["cdylib", "rlib"]
+
+[[bin]]
+name = "sdl"
+path = "src/main.rs"
 
 [dependencies]
 rand = "*"
@@ -9,3 +16,21 @@ rand = "*"
 [dependencies.sdl2]
 version = "0.34.3"
 features = ["unsafe_textures"]
+
+[dependencies.js-sys]
+version = "0.3.57"
+
+[dependencies.wasm-bindgen]
+version = "0.2.80"
+
+[dependencies.web-sys]
+version = "0.3.4"
+features = [
+  'CanvasRenderingContext2d',
+  'HtmlElement',
+  'HtmlCanvasElement',
+  'Window',
+  'Node',
+  'Document',
+  'console',
+]
