--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ version = "0.2.80"
 [dependencies.web-sys]
 version = "0.3.4"
 features = [
+  'CssStyleDeclaration',
   'CanvasRenderingContext2d',
   'HtmlElement',
   'HtmlCanvasElement',
