--- a/www/package.json
+++ b/www/package.json
@@ -28,9 +28,10 @@
   "homepage": "https://github.com/rustwasm/create-wasm-app#readme",
   "devDependencies": {
     "hello-wasm-pack": "^0.1.0",
-    "webpack": "^4.29.3",
+    "webpack": "^5.46.0",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
-    "copy-webpack-plugin": "^5.0.0"
+    "copy-webpack-plugin": "^5.0.0",
+    "@wasm-tool/wasm-pack-plugin": "^1.5.0"
   }
 }
