--- a/www/package.json
+++ b/www/package.json
@@ -33,5 +33,8 @@
     "webpack-dev-server": "^3.1.5",
     "copy-webpack-plugin": "^5.0.0",
     "@wasm-tool/wasm-pack-plugin": "^1.5.0"
+  },
+  "dependencies": {
+    "html-webpack-plugin": "^5.5.0"
   }
 }
