--- a/www/package.json
+++ b/www/package.json
@@ -1,18 +1,10 @@
 {
-  "name": "create-wasm-app",
+  "name": "wasm-chip8",
   "version": "0.1.0",
   "description": "create an app to consume rust-generated wasm packages",
-  "main": "index.js",
-  "bin": {
-    "create-wasm-app": ".bin/create-wasm-app.js"
-  },
   "scripts": {
     "build": "webpack --config webpack.config.js",
     "start": "webpack-dev-server"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rustwasm/create-wasm-app.git"
   },
   "keywords": [
     "webassembly",
@@ -22,9 +14,6 @@
   ],
   "author": "Ashley Williams <ashley666ashley@gmail.com>",
   "license": "(MIT OR Apache-2.0)",
-  "bugs": {
-    "url": "https://github.com/rustwasm/create-wasm-app/issues"
-  },
   "homepage": "https://github.com/rustwasm/create-wasm-app#readme",
   "devDependencies": {
     "hello-wasm-pack": "^0.1.0",
