--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "chip8"
 version = "0.1.0"
+description = "Chip8 emulator"
 edition = "2018"
 
 [lib]
@@ -24,7 +25,7 @@ wasm = [
 
 [dependencies]
 rand = {version = "*", optional = true}
-sdl2 = {version = "0.34.3", optional = true}
+sdl2 = {version = "0.34.3", optional = true, features = ["unsafe_textures"]}
 js-sys = {version = "0.3.57", optional = true}
 wasm-bindgen = {version = "0.2.80", optional = true}
 web-sys = {version = "0.3.55", optional = true, features = [
