--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,10 +27,15 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
+      - name: install_dependencies
+        run: |
+          sudo add-apt-repository -y "deb http://archive.ubuntu.com/ubuntu `lsb_release -sc` main universe restricted multiverse"
+          sudo apt-get update -y -qq
+          sudo apt-get install libsdl2-dev
       - uses: taiki-e/upload-rust-binary-action@v1
         with:
-          bin: "sdl"
           tar: unix
           zip: windows
+          bin: "sdl"
           features: "sdl"
           token: ${{ secrets.GITHUB_TOKEN }}
