--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,9 +29,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: install_dependencies
         run: |
-          sudo add-apt-repository -y "deb http://archive.ubuntu.com/ubuntu `lsb_release -sc` main universe restricted multiverse"
-          sudo apt-get update -y -qq
-          sudo apt-get install libsdl2-dev
+          sudo apt get update -y -qq
+          sudo apt install libsdl2-dev libsdl2-2.0-0 -y
       - uses: taiki-e/upload-rust-binary-action@v1
         with:
           tar: unix
