--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: install_dependencies
         run: |
-          sudo apt get update -y -qq
+          sudo apt update -y -qq
           sudo apt install libsdl2-dev libsdl2-2.0-0 -y
       - uses: taiki-e/upload-rust-binary-action@v1
         with:
