--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
     needs: create-release
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest]
         include:
           - os: ubuntu-latest
             features: systemd,io_uring
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: install_dependencies
         run: |
-          sudo apt install libsdl2-dev libsdl2-2.0-0 -y
+          sudo apt-get install libsdl2-dev libsdl2-2.0-0 -y
       - uses: taiki-e/upload-rust-binary-action@v1
         with:
           tar: unix
