--- a/web/package.json
+++ b/web/package.json
@@ -1,29 +1,31 @@
 {
   "name": "wasm-chip8",
-  "version": "0.1.0",
-  "description": "create an app to consume rust-generated wasm packages",
+  "version": "0.2.0",
+  "description": "Create an app to consume rust-generated wasm packages",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
-    "start": "webpack-dev-server"
+    "dev": "NODE_OPTIONS='--openssl-legacy-provider --inspect' next dev",
+    "build": "NODE_OPTIONS='--openssl-legacy-provider --inspect' next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "keywords": [
     "webassembly",
     "wasm",
+    "react",
     "rust",
-    "webpack"
+    "next"
   ],
-  "author": "Ashley Williams <ashley666ashley@gmail.com>",
   "license": "(MIT OR Apache-2.0)",
-  "homepage": "https://github.com/rustwasm/create-wasm-app#readme",
-  "devDependencies": {
-    "hello-wasm-pack": "^0.1.0",
-    "webpack": "^5.46.0",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5",
-    "copy-webpack-plugin": "^5.0.0",
-    "@wasm-tool/wasm-pack-plugin": "^1.5.0"
-  },
   "dependencies": {
-    "html-webpack-plugin": "^5.5.0"
+    "@wasm-tool/wasm-pack-plugin": "^1.4.0",
+    "next": "11.0.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "@types/react": "17.0.11",
+    "eslint": "7.29.0",
+    "eslint-config-next": "11.0.0",
+    "typescript": "4.3.4"
   }
 }
