--- a/web/package.json
+++ b/web/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "description": "create an app to consume rust-generated wasm packages",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
-    "start": "webpack-dev-server"
+    "build": "webpack --config config/webpack.common.js",
+    "start": "webpack-dev-server --config config/webpack.common.js"
   },
   "keywords": [
     "webassembly",
@@ -16,14 +16,36 @@
   "license": "(MIT OR Apache-2.0)",
   "homepage": "https://github.com/rustwasm/create-wasm-app#readme",
   "devDependencies": {
-    "hello-wasm-pack": "^0.1.0",
     "webpack": "^5.46.0",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
-    "copy-webpack-plugin": "^5.0.0",
-    "@wasm-tool/wasm-pack-plugin": "^1.5.0"
+    "copy-webpack-plugin": "^5.1.1",
+    "@wasm-tool/wasm-pack-plugin": "^1.5.0",
+    "html-webpack-plugin": "^5.5.0",
+    "postcss-loader": "^4.0.4",
+    "postcss-preset-env": "^6.7.0",
+    "css-loader": "^5.0.0",
+    "sass-loader": "^10.0.3",
+    "style-loader": "^2.0.0",
+    "css-minimizer-webpack-plugin": "^1.1.5",
+    "@babel/core": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/preset-react": "^7.12.7",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "eslint": "^7.11.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.2"
   },
   "dependencies": {
-    "html-webpack-plugin": "^5.5.0"
+    "@babel/runtime": "^7.13.10",
+    "core-js": "^3.10.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
