--- a/web/package.json
+++ b/web/package.json
@@ -16,31 +16,34 @@
   "license": "(MIT OR Apache-2.0)",
   "homepage": "https://github.com/rustwasm/create-wasm-app#readme",
   "devDependencies": {
-    "webpack": "^5.46.0",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5",
-    "copy-webpack-plugin": "^5.1.1",
-    "@wasm-tool/wasm-pack-plugin": "^1.5.0",
-    "html-webpack-plugin": "^5.5.0",
-    "postcss-loader": "^4.0.4",
-    "postcss-preset-env": "^6.7.0",
-    "css-loader": "^5.0.0",
-    "sass-loader": "^10.0.3",
-    "style-loader": "^2.0.0",
-    "css-minimizer-webpack-plugin": "^1.1.5",
     "@babel/core": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.7",
+    "@wasm-tool/wasm-pack-plugin": "^1.5.0",
+    "autoprefixer": "^10.4.17",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
+    "copy-webpack-plugin": "^5.1.1",
+    "css-loader": "^5.0.0",
+    "css-minimizer-webpack-plugin": "^1.1.5",
     "eslint": "^7.11.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.2"
+    "eslint-plugin-react": "^7.21.2",
+    "html-webpack-plugin": "^5.5.0",
+    "postcss": "^8.4.35",
+    "postcss-loader": "^4.0.4",
+    "postcss-preset-env": "^6.7.0",
+    "sass-loader": "^10.0.3",
+    "style-loader": "^2.0.0",
+    "tailwindcss": "^3.4.1",
+    "webpack": "^5.46.0",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5"
   },
   "dependencies": {
     "@babel/runtime": "^7.13.10",
