--- a/web/package.json
+++ b/web/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "description": "create an app to consume rust-generated wasm packages",
   "scripts": {
-    "build": "webpack --config config/webpack.common.js",
-    "start": "webpack-dev-server --config config/webpack.common.js"
+    "build": "webpack --config config/webpack.prod.js",
+    "start": "webpack serve --config config/webpack.common.js --progress"
   },
   "keywords": [
     "webassembly",
@@ -26,28 +26,21 @@
     "babel-loader": "^8.1.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^5.0.0",
-    "css-minimizer-webpack-plugin": "^1.1.5",
-    "eslint": "^7.11.0",
-    "eslint-config-prettier": "^6.12.0",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.2",
     "html-webpack-plugin": "^5.5.0",
     "postcss": "^8.4.35",
     "postcss-loader": "^4.0.4",
     "postcss-preset-env": "^6.7.0",
-    "sass-loader": "^10.0.3",
     "style-loader": "^2.0.0",
     "tailwindcss": "^3.4.1",
     "webpack": "^5.46.0",
-    "webpack-cli": "^3.1.0",
+    "webpack-cli": "^4.0.0",
     "webpack-dev-server": "^3.1.5"
   },
   "dependencies": {
-    "@babel/runtime": "^7.13.10",
-    "core-js": "^3.10.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
