Passing array to load_rom

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,8 +30,15 @@ web-sys = {version = "0.3.55", optional = true, features = [
   'CanvasRenderingContext2d',
   'HtmlElement',
   'HtmlCanvasElement',
+  'HtmlSelectElement',
+  'Event',
+  'EventTarget',
   'Window',
+  'Attr',
+  'DomTokenList',
+  'KeyboardEvent',
   'Node',
+  'Text',
   'Document',
   'console',
 ]}
