--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ web-sys = {version = "0.3.55", optional = true, features = [
   'HtmlElement',
   'HtmlCanvasElement',
   'HtmlSelectElement',
+  'HtmlOptionElement',
   'Event',
   'EventTarget',
   'Window',
