Add chip8 as part of dependencies

--- a/web/package.json
+++ b/web/package.json
@@ -42,6 +42,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "chip8": "../pkg"
   }
 }
