Revert to main.rs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["cdylib", "rlib"]
 [[bin]]
 name = "native"
 required-features = ["sdl"]
+path = "src/main.rs"
 
 [features]
 sdl = ["sdl2"]
